src/objects/AR_CaptchaSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Captcha challenge in Agency Portal.</description>
    <fields>
        <fullName>Base_URL__c</fullName>
        <description>Captcha service URL</description>
        <label>Base URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Private_Key__c</fullName>
        <description>Captcha service private key</description>
        <label>Private Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Key__c</fullName>
        <description>Captcha service public key.</description>
        <label>Public Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>AR_CaptchaSettings</label>
</CustomObject>